--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,6 @@
 $textColor: #fff;
 $secondaryTextColor: #000;
 
-$blue1: #1b6ca7;
-$blue2: #442bdb;
-$pink: #89223b;
-$yellow: #9c791d;
-$purple: #4f2ac3;
+$black: #000000;
+$darkred: #7c0909;
+$red: #db2b2b;
