ajustando a responsividade do site

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -22,6 +22,10 @@
   &--primary {
     color: $textColor;
     background-color: $darkred;
+
+    &:hover {
+      background-color: $darkredSecondary;
+    }
   }
 
 
