--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -10,16 +10,6 @@
 
   @media (max-width: 640px){
     padding: 48px 0;
-
-    &__logo {
-      height: 40px;
-    }
-
-    &__text {
-      font-size: 22px;
-      line-height: 24px;
-      margin: 24px 0;
-    }
   }
   
   .container {
@@ -45,11 +35,11 @@
     font-weight: 900;
     text-align: center;
     color: $textColor;
-  }
 
-  &__logo {
-    margin: 0 auto;
-    height: 80px;
-    display: block;
+    @media (max-width: 640px){
+      font-size: 28px;
+      line-height: 40px;
+      margin: 20px 0;
+    }
   }
 }
