--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -37,9 +37,9 @@
     color: $textColor;
 
     @media (max-width: 640px){
-      font-size: 28px;
+      font-size: 20px;
       line-height: 40px;
-      margin: 20px 0;
+      margin: 20px 0 150px;
     }
   }
 }
